ajuste no securityconfig, estava apontando para local e no deploy caía sem permissão